# clips_vendor-release

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  core_cast_c.patch.in  package.xml  toplevel.buildsys.CMakeLists.txt.in
buildsys/: CMakeLists.txt
buildsys/branches/: CMakeLists.txt
buildsys/branches/64x/: CMakeLists.txt  add_namespace.py
buildsys/branches/64x/clipsjni/: CMakeLists.txt
buildsys/branches/64x/core/: CMakeLists.txt  clipsConfig.cmake.in
debian/: changelog  control  copyright  gbp.conf  rules
