<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clips_vendor</name>
  <version>6.4.3</version>
  <description>Vendor package for the CLIPS rule based production system</description>
  <maintainer email="viehmann@kbsg.rwth-aachen.de">Tarik Viehmann</maintainer>
  <maintainer email="tim.wendt@alumni.fh-aachen.de">Tim Wendt</maintainer>
  <license>MIT-0</license> <!-- License of both CLIPS (Copyright 2023 Secret Society Software, LLC) and this package -->
  <depend>ament_cmake_vendor_package</depend>
  <depend>unzip</depend>
  <depend condition="$BUILD_WITH_JAVA_EXAMPLES != ''"> java</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
